--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,33 @@
 body {
     font-family: "Times New Roman", serif;
-    font-size: 12pt;
+    font-size: 16pt;
     margin: 0;
     padding: 0;
-  }
-  
-  header {
+}
+
+header {
     background-color: #f5f5f5;
     padding: 20px;
     text-align: center;
-  }
-  
-  h1 {
+}
+
+h1 {
     margin: 0;
-  }
-  
-  main {
+}
+
+main {
     padding: 20px;
-  }
-  
-  #content {
+}
+
+#content {
     white-space: pre-line;
-  }
+}
+
+@media print {
+    .no-print {
+        display: none;
+    }
+}
+  
   
   
