--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Times New Roman", serif;
+    font-family: Arial, sans-serif;
     font-size: 16pt;
     margin: 0;
     padding: 0;
@@ -21,6 +21,7 @@ main {
 
 #content {
     white-space: pre-line;
+    line-height: 1.4; /* Adjust this value to increase or decrease the line spacing */
 }
 
 @media print {
@@ -29,5 +30,25 @@ main {
     }
 }
   
+button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 4px;
+    transition-duration: 0.4s;
+}
   
-  
+button:hover {
+    background-color: #45a049;
+}
+
+.hidden {
+    display: none;
+}
