--- a/styles.css
+++ b/styles.css
@@ -15,13 +15,17 @@ h1 {
     margin: 0;
 }
 
+h2 {
+    font-size: 18pt;
+}
+
 main {
     padding: 20px;
 }
 
 #content {
     white-space: pre-line;
-    line-height: 1.4; /* Adjust this value to increase or decrease the line spacing */
+    line-height: 1.4;
 }
 
 @media print {
